# sql-bspline

./: .editorconfig  .gitignore  CMakeLists.txt  bspline.c  bspline.h  extension.c  readme.md
dep/dierckx/: CMakeLists.txt  dierckx.h
tests/: conftest.py  test_loadext.py  testdata.c  testprog.c
